# tts_piper

./: .gitignore  CMakeLists.txt  package.xml  requirements.in  requirements.txt
data/: download_voice.sh  list_voices.sh
launch/: tts.launch  tts_standalone.launch
scripts/: cli  tts
