<?xml version="1.0"?>
<package format="2">
  <name>tts_piper</name>
  <version>1.0.0</version>
  <description>Text-to-Speech using PiperVoice</description>

  <maintainer email="me@v4hn.de">v4hn</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>audio_common_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>catkin_virtualenv</build_depend>
  <export>
    <pip_requirements>requirements.txt</pip_requirements>
  </export>
</package>
